chore: fix withProfession queryparam and miscellaneous stuff

--- a/webapp/front/front/src/app/features/admin/admin-amenities-page/admin-amenities-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-amenities-page/admin-amenities-page.component.html
@@ -94,6 +94,7 @@
     <app-paginator
       [totalPages]="totalPages"
       [currentPage]="currentPage"
+      [theme]="'admin'"
       (pageChange)="onPageChange($event)"
     ></app-paginator>
   </div>
