--- a/webapp/front/front/src/app/features/feed/feed-create-post-page/feed-create-post-page.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-create-post-page/feed-create-post-page.component.html
@@ -125,7 +125,8 @@
                 <input
                   #newTagInput
                   type="text"
-                  placeholder="Create new tag"
+                  placeholder="Create a tag (e.g., ThisIsATag)"
+                  (keydown)="handleTagInputKeydown($event, newTagInput)"
                   class=""
                 />
                 <button
