--- a/webapp/front/front/src/app/features/service-providers/service-providers-join-neighborhoods-page/service-providers-join-neighborhoods-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-join-neighborhoods-page/service-providers-join-neighborhoods-page.component.html
@@ -102,8 +102,7 @@
                 <div class="container m-0" #listContainer>
                   <!-- "select-btn" toggles the .open class -->
                   <div
-                    class="select-btn n-workers"
-                    style="width: 100%"
+                    class="select-btn n-workers w-100"
                     [class.open]="isSelectOpen"
                     #selectBtn
                     (click)="toggleSelect()"
@@ -140,7 +139,7 @@
 
                 <button
                   type="submit"
-                  class="cool-button cool-small on-bg font-weight-bold w-25"
+                  class="cool-button cool-small services-button on-bg font-weight-bold w-25"
                 >
                   Add
                   <i class="fa-solid fa-share ml-1"></i>
