--- a/webapp/front/front/src/app/shared/components/tags-filter-widget/tags-filter-widget.component.html
+++ b/webapp/front/front/src/app/shared/components/tags-filter-widget/tags-filter-widget.component.html
@@ -1,7 +1,7 @@
 <div class="grey-static-container">
   <div class="f-c-c-s g-0">
     <div class="f-r-sb-c w-100">
-      <h3 class="pt-1 pb-1 m-1">
+      <h3 class="pt-1 pb-1 m-1 mb-2">
         {{ mode === "tags" ? "Filter by Tags" : "Filter by Profession" }}
       </h3>
     </div>
