--- a/webapp/front/front/src/app/features/service-providers/service-providers-content/service-providers-content.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-content/service-providers-content.component.html
@@ -48,7 +48,7 @@
         <button
           *ngIf="isTheWorker"
           id="editProfileButton"
-          class="cool-button cool-small profession-button on-bg font-weight-bold"
+          class="cool-button cool-small services-button on-bg font-weight-bold"
           style="width: 100px"
           (click)="openEditProfile.emit()"
         >
