--- a/webapp/front/front/src/app/features/service-providers/service-providers-review-dialog/service-providers-review-dialog.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-review-dialog/service-providers-review-dialog.component.html
@@ -15,7 +15,7 @@
         </p>
       </div>
     </div>
-    <a class="close-button" (click)="closeReviewDialog()">
+    <a class="close-button services" (click)="closeReviewDialog()">
       <i class="fas fa-close"></i>
     </a>
     <form
@@ -33,11 +33,17 @@
             (click)="setRating(star)"
           ></i>
         </div>
+        <div
+          *ngIf="!rating && reviewForm.submitted"
+          class="error-message c-red"
+        >
+          *Please select a star rating.
+        </div>
 
         <textarea
           name="reviewMessage"
           [(ngModel)]="reviewMessage"
-          class="cool-input textarea-min-max"
+          class="cool-input services-input textarea-min-max"
           rows="5"
           placeholder="Your review..."
           required
@@ -54,7 +60,7 @@
       </div>
       <button
         type="submit"
-        class="w-75 cool-button pure filled-interesting square-radius font-size-14 font-weight-bold"
+        class="w-75 cool-button services-button pure filled-interesting square-radius font-size-14 font-weight-bold"
         [disabled]="reviewForm.invalid"
       >
         Submit Review
